<resources>
    <string name="app_name">Bengal</string>


    <!--=======================Navigation header=================================================-->

    <string name="user_name">Bengal Islami life Insurance</string>
    <string name="user_mail">bengal.islami@protonmail.com</string>


    <!--=======================all url==========================================================-->

    <string name="payment_url_base">https://www.ims.nrbglife.com:8090/</string>
    <string name="payment_url_1">OnlinePayment/OnlinePay/Index</string>
    <string name="website_url">https://www.nrbgloballife.com/</string>
    <string name="premium_calculator_url">https://www.nrbgloballife.com/PremiumCalc</string>
    <string name="branch_details_url">https://www.nrbgloballife.com/WebSiteContent/Index?value=Collection_Booth</string>
    <string name="download_form_url">https://www.nrbgloballife.com/CustomerCare/DocumentsIndex</string>


    <!--============================generate from xml ===========================================-->

    <string name="home">Home</string>
    <string name="premium_calculator">Premium Calculator</string>
    <string name="branch_office">Branch Office</string>
    <string name="website">Website</string>
    <string name="website_icon">website_icon</string>
    <string name="premium_calculator_icon">premium_calculator_icon</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="guest_icon">guest_icon</string>
    <string name="individual_plan">Individual Plan</string>
    <string name="payment_method">Payment Method</string>
    <string name="policy_statement">Policy Statement</string>
    <string name="claim">Claim</string>
    <string name="claim_status">Claim Status</string>
    <string name="download_form">Download Form</string>
    <string name="user_id">User ID</string>
    <string name="user_password">User Password</string>
    <string name="login">Login</string>
    <string name="continue_as_guest_1">CONTINUE AS GUEST</string>
    <string name="bengal_islami_life_insurance">Bengal Islami Life Insurance</string>
    <string name="enter_one_time_password">Enter One-time Password</string>
    <string name="submit">Submit</string>
    <string name="want_to_change_number_or_resend_otp">Want to change number or resend OTP?</string>
    <string name="already_have_a_account">Already have a account?</string>
    <string name="network_hospital">Network Hospital</string>
    <string name="hospital_icon">hospital icon</string>
    <string name="contact_icon">contact icon</string>
    <string name="contact_us">Contact us</string>
    <string name="my_policy">My Policy</string>
    <string name="my_policy_icon">my policy icon</string>
    <string name="home_page_icon">home page icon</string>
    <string name="job_circular">Job Circular</string>
    <string name="logout_apps">Logout apps</string>
    <string name="logout">Logout</string>
    <string name="notice_board">Notice Board</string>


</resources>