<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!-- android resource empty in ImageView-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"/>

    <GridLayout
        android:id="@+id/home_gridLayout_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="3"
        android:columnCount="3">

        <!-- ============================1st line gridlayout =========================================-->

        <!--Individual plan-->
        <androidx.cardview.widget.CardView
            android:id="@+id/home_cardview_individual_plan_Id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_home_individual_plan"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/individual_plan"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- payment method -->
        <androidx.cardview.widget.CardView
            android:id="@+id/home_cardview_payment_method_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_home_payment_method"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_method"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <!-- premium calculator -->
        <androidx.cardview.widget.CardView
            android:id="@+id/home_cardview_premium_calculator_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_home_premium_calculator"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/premium_calculator"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- ============================2nd line gridlayout =========================================-->

        <!-- -->
        <androidx.cardview.widget.CardView
            android:id="@+id/home_cardview_policy_statement_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_policy_statement"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/policy_statement"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- -->
        <androidx.cardview.widget.CardView

            android:id="@+id/home_cardview_claim_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_claim"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/claim"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- -->
        <androidx.cardview.widget.CardView
            android:id="@+id/home_cardview_claim_status_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_claim_status"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/claim_status"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- ============================3rd line gridlayout =========================================-->

        <!-- -->
        <androidx.cardview.widget.CardView
            android:id="@+id/home_cardview_download_form_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_download"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download_form"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

</LinearLayout>