<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/home_page_header_image_1"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <!-- ============================1st line gridlayout =========================================-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">

            <!--Individual plan-->
            <androidx.cardview.widget.CardView
                android:id="@+id/home_cardview_individual_plan_Id"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_home_individual_plan"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/individual_plan"
                        android:textStyle="bold"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- payment method -->
            <androidx.cardview.widget.CardView
                android:id="@+id/home_cardview_payment_method_id"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_home_payment_method"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_method"
                        android:textStyle="bold"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!-- premium calculator -->
            <androidx.cardview.widget.CardView
                android:id="@+id/home_cardview_premium_calculator_id"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_home_premium_calculator"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/premium_calculator"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:gravity="center_horizontal" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <!-- ============================2nd line gridlayout =========================================-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">
            <!-- -->
            <androidx.cardview.widget.CardView
                android:id="@+id/home_cardview_policy_statement_id"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_policy_statement"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_statement"
                        android:textStyle="bold"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- -->
            <androidx.cardview.widget.CardView

                android:id="@+id/home_cardview_claim_id"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_claim"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/claim"
                        android:textStyle="bold"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- -->
            <androidx.cardview.widget.CardView
                android:id="@+id/home_cardview_claim_status_id"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_claim_status"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/claim_status"
                        android:textStyle="bold"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <!-- ============================3rd line gridlayout =========================================-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">

            <!-- -->
            <androidx.cardview.widget.CardView
                android:id="@+id/home_cardview_download_form_id"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_form"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/download_form"
                        android:textStyle="bold"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- -->
            <androidx.cardview.widget.CardView
                android:id="@+id/home_cardview_job_circular_id"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_job"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/job_circular"
                        android:textStyle="bold"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- -->
            <androidx.cardview.widget.CardView
                android:id="@+id/home_cardview_notice_id"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_notice"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notice_board"
                        android:textStyle="bold"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>



    </LinearLayout>

</LinearLayout>